--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
     "public": "build",
-    "site": "kaipoche",
+    "site": "askqns",
     "ignore": [
       "firebase.json",
       "**/.*",
